CHANGES
=======

FIX: Init orchestrator_core logger with empty values for startup errors

1.6.0

FIX: return policy into results of get PolicyFromRole [#97]
FIX: typo in status returned by delete metrics

1.5.3

FEATURE: update uwsgi version to 2.0.15
FIX: catch error disabling and deleting service when create service fails [#90]
FEATURE: duplicate number of procesing resources
FIX: error trace reported when metrics are trying to calculate error response size [#84]
FIX: replace error by warn trace when trying to remove elements in third parties [#83]
FIX: set pepperseo conf after perseo conf in docker [#82]
FEATURE: allow non positional args in docker entrypoint [#78]

1.5.2

FIX: get project detail with scoped token

1.5.1

FIX: Perseo expected port in docker

1.5.0

FEATURE: Metrics API [#58]
FEATURE: Support keystone groups in a Service, including role assignments [#56]
FIX: Add pagination to list orion subscriptions [#37]

1.4.5

FIX: Perseo expected port in docker

1.4.4

FIX: Fix dependencies version to a fixed version

1.4.3

FIX: Add pagination to list orion subscriptions [#37]

1.4.2

FEATURE: get_version_string extended to include release information


1.4.1

FIX: django trace logs


1.4.0

FEATURE: Remove perseo rules when service or subservice is deleted - issue 24
FIX: Notifypath not handled by docker orchestrator conf - issue 42


1.3.0

task/get_current_log_level
task/align_log_format
task/endpoint_connection_error_in_detail


1.2.6

bug/get_tag_release_branch


1.2.5

bug/remove_subscriptions_at_service_subservice_delete - issue 22


1.2.4

feature/task/notify_path_by_conf_for_iotmodules


1.2.3

bug/check_idpattern_exists_all_subcriptions


1.2.2

bug/allow_orion_subscription_entity_without_type_or_empty


1.2.1

bug/check_orion_suscription_entity_type_exits


1.2.0

task/delete_keystone_roles_at_delete_domain
task/utc_for_log_time


1.1.0

task/docker_improvements
task/task/resolve_service_name_role_flow


1.0.0

task/remove_policy_from_role

