@@ -73,8 +73,10 @@ class Domains(FlowBase):
             self.logger.debug("DOMAINS=%s" % json.dumps(DOMAINS, indent=3))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
+
 
         data_log = {
             "DOMAINS": DOMAINS
@@ -139,8 +141,9 @@ class Domains(FlowBase):
             self.logger.debug("DOMAIN=%s" % json.dumps(DOMAIN, indent=3))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "DOMAIN": DOMAIN
@@ -211,8 +214,9 @@ class Domains(FlowBase):
             self.logger.debug("DOMAIN=%s" % json.dumps(DOMAIN, indent=3))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "DOMAIN": DOMAIN
@@ -355,8 +359,9 @@ class Domains(FlowBase):
             self.logger.debug("DOMAIN=%s" % DOMAIN)
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "DOMAIN": DOMAIN
@@ -473,8 +478,9 @@ class Domains(FlowBase):
                 raise Exception("not admin role found to perform this action")
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "POLICIES": policies
@@ -591,8 +597,9 @@ class Domains(FlowBase):
             self.logger.debug("subscription id=%s" % subscriptionid)
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "subscriptionid": subscriptionid
@@ -688,8 +695,9 @@ class Domains(FlowBase):
             # self.logger.debug("subscription id=%s" % subscriptionid)
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "subscriptionid": subscriptionid
@@ -768,8 +776,9 @@ class Domains(FlowBase):
             self.logger.debug("modules=%s" % json.dumps(modules, indent=3))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "modules": modules
