@@ -108,8 +108,9 @@ class Users(FlowBase):
             # Listar los usuarios de un Subservicio
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "SERVICE_USERS": SERVICE_USERS,
@@ -175,8 +176,9 @@ class Users(FlowBase):
             self.logger.debug("DETAIL_USER=%s" % json.dumps(DETAIL_USER, indent=3))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "DETAIL_USER": DETAIL_USER,
