@@ -128,8 +128,9 @@ class CreateNewServiceRole(FlowBase):
                                         POLICY_FILE_NAME='policy-keypass-customer2.xml')
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "SERVICE_ID": "%s" % SERVICE_ID,
