@@ -108,8 +108,9 @@ class CreateNewServiceUser(FlowBase):
             self.logger.debug("ID of user %s: %s" % (NEW_USER_NAME, ID_USER))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "SERVICE_ID": "%s" % SERVICE_ID,
