@@ -105,8 +105,9 @@ class RemoveUser(FlowBase):
             # self.logger.debug("ID of user %s: %s" % (USER_NAME, ID_USER))
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "USER_ID": USER_ID
