@@ -106,8 +106,9 @@ class UpdateUser(FlowBase):
                                 USER_DATA_VALUE)
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "USER_ID": USER_ID,
@@ -197,8 +198,9 @@ class UpdateUser(FlowBase):
                                         NEW_USER_PASSWORD)
 
         except Exception, ex:
-            self.logger.error(ex)
-            return self.composeErrorCode(ex)
+            error_code = self.composeErrorCode(ex)
+            self.logError(self.logger, error_code, ex)
+            return error_code
 
         data_log = {
             "USER_ID": USER_ID,
