@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+FEATURE: Do not log as error level requests with codes > 400 and < 500
 FIX: Init orchestrator_core logger with empty values for startup errors
 
 1.6.0
